# phl

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
phl/: agent.py  cron.py  db.py  jellyfin.py  telegram.py
phl/migrations/: 001_create_schedules.sql
