[project]
name = "phl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openrouter>=0.2.3",
    "python-telegram-bot>=22.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
